2011-12-14  Jason Merrill  <jason@redhat.com>

	PR c++/51248
	* decl.c (copy_type_enum): Also update variants.
	(finish_enum): Allow variants of complete enums.

2011-12-13  Jason Merrill  <jason@redhat.com>

	PR c++/51406
	PR c++/51161
	* typeck.c (build_static_cast_1): Fix cast of lvalue to
	base rvalue reference.

2011-11-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51265
	* semantics.c (finish_decltype_type): Handle PTRMEM_CST.

2011-11-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51150
	* pt.c (tsubst_copy_and_build): Handle FIX_TRUNC_EXPR.

2011-11-07  Jason Merrill  <jason@redhat.com>

	PR c++/50870
	* pt.c (tsubst_copy): Handle NAMESPACE_DECL.
	(tsubst_copy_and_build) [COMPONENT_REF]: Handle a still-dependent
	object.

2011-11-04  Eric Botcazou  <ebotcazou@adacore.com>

	PR c++/50608
	* semantics.c (finish_offsetof): Adjust call to fold_offsetof.
	* typeck.c (cp_build_addr_expr_1): Call fold_offsetof_1.

2011-10-29  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50901
	* call.c (build_new_op_1): Handle ABS_EXPR together with the
	other unary EXPR.

2011-10-26  Release Manager

	* GCC 4.6.2 released.

2011-10-19  Jason Merrill  <jason@redhat.com>

	PR c++/50793
	* tree.c (bot_manip): Propagate AGGR_INIT_ZERO_FIRST.

2011-10-19  Jason Merrill  <jason@redhat.com>

	PR c++/50787
	* parser.c (cp_parser_initializer_clause): Don't call
	maybe_constant_value here.

2011-10-18  Jason Merrill  <jason@redhat.com>

	PR c++/50531
	* pt.c (instantiate_decl): Recognize when a function defaulted
	outside the class is already instantiated.

2011-10-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	Backport from mainline
	2011-06-06  Nicola Pero  <nicola.pero@meta-innovation.com>,

	PR obj-c++/48275
	* parser.c (cp_parser_objc_at_property_declaration): Allow setter
	and getter names to use all the allowed method names.

2011-10-13  Jason Merrill  <jason@redhat.com>

	PR c++/50618
	* init.c (expand_aggr_init_1): Don't zero-initialize virtual